// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating rollup stats 3 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98808,
      "name": "main-1cbfd464.js",
      "normalized": "main-*.js",
      "size": 577073,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-amd",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-1cbfd464.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98252,
      "name": "main-420d8aeb.js",
      "normalized": "main-*.js",
      "size": 560888,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-cjs",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-420d8aeb.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98243,
      "name": "main-6ff1e9ca.js",
      "normalized": "main-*.js",
      "size": 560873,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-6ff1e9ca.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98243,
      "name": "main-6ff1e9ca.js",
      "normalized": "main-*.js",
      "size": 560873,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-6ff1e9ca.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98243,
      "name": "main-6ff1e9ca.js",
      "normalized": "main-*.js",
      "size": 560873,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-6ff1e9ca.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98804,
      "name": "main-cc182ba1.js",
      "normalized": "main-*.js",
      "size": 577068,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-iife",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-cc182ba1.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98845,
      "name": "main-cdb2522f.js",
      "normalized": "main-*.js",
      "size": 577167,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-umd",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-cdb2522f.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 99908,
      "name": "main-b7135d24.js",
      "normalized": "main-*.js",
      "size": 609446,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-system",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-b7135d24.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 99908,
      "name": "main-b7135d24.js",
      "normalized": "main-*.js",
      "size": 609446,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-system",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-b7135d24.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 source maps are enabled does not include any source maps 1`] = `
{
  "assets": [
    {
      "gzipSize": 98275,
      "name": "main-6ff1e9ca.js",
      "normalized": "main-*.js",
      "size": 560915,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-6ff1e9ca.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98808,
      "name": "main-Bz9ahex4.js",
      "normalized": "main-*.js",
      "size": 577073,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-amd",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-Bz9ahex4.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98252,
      "name": "main-xb59kfqA.js",
      "normalized": "main-*.js",
      "size": 560888,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-cjs",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-xb59kfqA.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98243,
      "name": "main-DTMU6eC0.js",
      "normalized": "main-*.js",
      "size": 560873,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DTMU6eC0.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98243,
      "name": "main-DTMU6eC0.js",
      "normalized": "main-*.js",
      "size": 560873,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DTMU6eC0.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98243,
      "name": "main-DTMU6eC0.js",
      "normalized": "main-*.js",
      "size": 560873,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DTMU6eC0.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98804,
      "name": "main-B7VbaLUG.js",
      "normalized": "main-*.js",
      "size": 577068,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-iife",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-B7VbaLUG.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 98845,
      "name": "main-DXhL8JQx.js",
      "normalized": "main-*.js",
      "size": 577167,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-umd",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DXhL8JQx.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 99908,
      "name": "main-DwblAVj_.js",
      "normalized": "main-*.js",
      "size": 609446,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DwblAVj_.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 99908,
      "name": "main-DwblAVj_.js",
      "normalized": "main-*.js",
      "size": 609446,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DwblAVj_.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 source maps are enabled does not include any source maps 1`] = `
{
  "assets": [
    {
      "gzipSize": 98277,
      "name": "main-DTMU6eC0.js",
      "normalized": "main-*.js",
      "size": 560915,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DTMU6eC0.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "1.9.1",
  },
  "version": "3",
}
`;
